   variables. Functions and variables previously prefixed with underscore
   can't be accessed outside the modules anymore.
 - Core: release and version are now private variables, their values can be
   retrieved with vorple.core.getRelease() and vorple.core.getVersion()
 - Core: Added vorple.core.getEngine() to give the current engine object
 - HTML: Fixed a bug where the second parameter to vorple.html.attributes()
   would have no effect
 - Media: Updated to work with SoundManager instead of jPlayer
 - Media: Added stopSound()
 - Media: Music now fades out when stopped or another song is played, and
   all functions that stop sounds can fade out instead
 - Parser: Character input support
 - Parser: Commands triggered while a turn is running are put into a queue
   and ran when the prompt is ready
 - Parser: Meta and dialog commands that have no output will not pop up
   a notification/dialog
 - Parser: Support for nested HTML tags
 - Parser: Support for commands issued from the story file before  play begins
 - Parser: A proper method for adding expressions to the JavaScript queue
   (vorple.parser.queueExpression())
 - Parser: Fixed a bug that prevented custom filters from running 
   in some cases
 - Undum: Changed vorple.undum.settings to vorple.undum.defaults


Releases
--------

 - The library is now packaged to three complete minified library files that
   includes everything needed by the system, one for each engine and one
   "vanilla" with no engine. There's also a single JavaScript file that
   contains all third party libraries.
 - Using a single library file also fixes the problem where jQuery was not
   loaded correctly in the Inform 7 interpreter template when there was no 
   Internet connection
 - Added a configurable loader message for Parchment
 - Fixed a rejected command's CSS rule so that it's styled correctly
 - Revised the build script
 - I7 now supports adding custom JavaScript and CSS files, so automatically